support/crown/tests/ui/trace_in_no_trace_works.stderr
error: must_not_have_traceable marked wrapper must not have jsmanaged inside on 0-th position. Consider removing the wrapper.
  --> $DIR/trace_in_no_trace_works.rs:10:12
   |
10 | struct Foo(NoTrace<Bar>);
   |            ^^^^^^^^^^^^
   |
   = note: `#[deny(crown::trace_in_no_trace)]` on by default

error: aborting due to previous error

